# enoki

./: .dockerignore  .gitignore  Cargo.toml  README.md  oxfmt.config.ts  oxlint.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release-hub.yml  release-probe.yml  release.yml  reusable-build-probe.yml  reusable-hub-image.yml  reusable-node-checks.yml  reusable-publish-probe-release.yml  reusable-rust-checks.yml
apps/hub/: Dockerfile  package.json  (+4 more)
crates/probe/: Cargo.toml
crates/probe/src/: cli.rs  collectors.rs  host_profile.rs  inventory.rs  lib.rs  local_privilege_boundary.rs  main.rs  metrics.rs  privileged_collector_helpers.rs  privileged_collectors.rs  privileged_runtime.rs  probe_auth.rs  protocol.rs  registration.rs  report.rs  runtime.rs  upgrader.rs  version.rs
crates/probe/src/metrics/: disk_health.rs
crates/probe/src/metrics/official/: battery.rs  cpu.rs  disk.rs  load.rs  memory.rs  mod.rs  network.rs  temperature.rs  uptime.rs
crates/probe/tests/: cli.rs  collector_config.rs  host_profile_report.rs  inventory_report.rs  local_privilege_boundary.rs  metrics.rs  privileged_runtime.rs  protocol.rs  registration.rs  runtime.rs
docs/: 监控平台安全风险说明.md
scripts/: create-probe-asset-manifest.mjs  create-probe-asset-manifest.test.mjs  create-size-badge-assets.mjs  create-size-badge-assets.test.mjs  dev-probe.mjs  install-probe.sh  oxlint-tailwind-plugin.test.mjs
(+264 files in other folders)
