[workspace]
members = ["crates/probe", "crates/proto-gen"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
# Cargo requires a package version even for unpublished binaries. Release
# versions are owned by Git tags and injected into Probe builds by CI.
version = "0.0.0"

[workspace.lints.clippy]
all = "deny"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = "symbols"
