[package]
name = "enoki-probe"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
libc = "0.2"
prost = "0.14.1"
sha2 = "0.10"
toml = "0.8"
ureq = { version = "2.12.1", default-features = false, features = ["tls"] }

[dev-dependencies]
tempfile = "3.20.0"

[lints]
workspace = true
