[package]
name = "enoki-probe"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
flate2 = "1.0"
libc = "0.2"
prost = "0.14.1"
rsa = { version = "0.9", features = ["pem"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = { version = "0.11", features = ["oid"] }
tar = "0.4"
toml = "1.1"
ureq = { version = "2.12.1", default-features = false, features = ["tls"] }
url = "2.5"

[dev-dependencies]
tempfile = "3.20.0"

[lints]
workspace = true
